feat: Implement scope, init

--- a/project3/skeleton_proj3/Makefile
+++ b/project3/skeleton_proj3/Makefile
@@ -14,14 +14,17 @@ all : subc
 clean :
 	rm -f *.o lex.yy.c subc.tab.c subc.tab.h subc.output subc
 
-subc : lex.yy.o hash.o subc.tab.o
-	${CC} -o subc lex.yy.o hash.o subc.tab.o ${LINK_OPTION}
+subc : lex.yy.o hash.o subc.tab.o scope.o
+	${CC} -o subc lex.yy.o hash.o subc.tab.o scope.o ${LINK_OPTION}
 
 subc.tab.o : subc.tab.c subc.h
 	${CC} -c ${COMPILE_OPTION} subc.tab.c
 
 hash.o : hash.c subc.h
 	${CC} -c ${COMPILE_OPTION} hash.c
+
+scope.o : scope.c subc.h
+	${CC} -c ${COMPILE_OPTION} scope.c
 
 lex.yy.o : lex.yy.c subc.tab.h subc.h
 	${CC} -c ${COMPILE_OPTION} lex.yy.c
